[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "countstars"
authors = [{name = "Radovan Bast", email = "radovan.bast@uit.no"}]
dynamic = ["version", "description"]
dependencies = [
    "click",
    "matplotlib",
    "scikit-image",
]

[project.urls]
Home = "https://github.com/workshop-material/countstars"

[project.scripts]
count-stars = "countstars:main"
